// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Inpage navigation renders correctly 1`] = `
<test>
  <nav
    class="ecl-inpage-navigation"
    data-ecl-auto-init="InpageNavigation"
    data-ecl-inpage-navigation="true"
  >
    <div
      class="ecl-inpage-navigation__title"
    >
      Page contents
    </div>
    <div
      class="ecl-inpage-navigation__body"
    >
      <button
        aria-controls="ecl-inpage-navigation-list"
        aria-expanded="false"
        class="ecl-inpage-navigation__trigger"
        data-ecl-inpage-navigation-trigger="true"
        id="ecl-inpage-navigation-trigger"
        type="button"
      >
        <span
          class="ecl-inpage-navigation__trigger-current"
          data-ecl-inpage-navigation-trigger-current="true"
        />
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-inpage-navigation__trigger-icon"
          focusable="false"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="ecl-inpage-navigation-trigger"
        class="ecl-inpage-navigation__list"
        data-ecl-inpage-navigation-list="true"
        id="ecl-inpage-navigation-list"
      >
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-1"
          >
            Heading 1
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-2"
          >
            Heading 2 with a long title going on several lines
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-3"
          >
            Heading 3
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-4"
          >
            Heading 4
          </a>
        </li>
      </ul>
    </div>
  </nav>
</test>
`;

exports[`EC - Inpage navigation renders correctly with extra attributes 1`] = `
<test>
  <nav
    class="ecl-inpage-navigation"
    data-ecl-auto-init="InpageNavigation"
    data-ecl-inpage-navigation="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-inpage-navigation__title"
    >
      Page contents
    </div>
    <div
      class="ecl-inpage-navigation__body"
    >
      <button
        aria-controls="ecl-inpage-navigation-list"
        aria-expanded="false"
        class="ecl-inpage-navigation__trigger"
        data-ecl-inpage-navigation-trigger="true"
        id="ecl-inpage-navigation-trigger"
        type="button"
      >
        <span
          class="ecl-inpage-navigation__trigger-current"
          data-ecl-inpage-navigation-trigger-current="true"
        />
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-inpage-navigation__trigger-icon"
          focusable="false"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="ecl-inpage-navigation-trigger"
        class="ecl-inpage-navigation__list"
        data-ecl-inpage-navigation-list="true"
        id="ecl-inpage-navigation-list"
      >
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-1"
          >
            Heading 1
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-2"
          >
            Heading 2 with a long title going on several lines
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-3"
          >
            Heading 3
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-4"
          >
            Heading 4
          </a>
        </li>
      </ul>
    </div>
  </nav>
</test>
`;

exports[`EC - Inpage navigation renders correctly with extra class names 1`] = `
<test>
  <nav
    class="ecl-inpage-navigation custom-class custom-class--test"
    data-ecl-auto-init="InpageNavigation"
    data-ecl-inpage-navigation="true"
  >
    <div
      class="ecl-inpage-navigation__title"
    >
      Page contents
    </div>
    <div
      class="ecl-inpage-navigation__body"
    >
      <button
        aria-controls="ecl-inpage-navigation-list"
        aria-expanded="false"
        class="ecl-inpage-navigation__trigger"
        data-ecl-inpage-navigation-trigger="true"
        id="ecl-inpage-navigation-trigger"
        type="button"
      >
        <span
          class="ecl-inpage-navigation__trigger-current"
          data-ecl-inpage-navigation-trigger-current="true"
        />
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--s ecl-icon--rotate-180 ecl-inpage-navigation__trigger-icon"
          focusable="false"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
      </button>
      <ul
        aria-labelledby="ecl-inpage-navigation-trigger"
        class="ecl-inpage-navigation__list"
        data-ecl-inpage-navigation-list="true"
        id="ecl-inpage-navigation-list"
      >
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-1"
          >
            Heading 1
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-2"
          >
            Heading 2 with a long title going on several lines
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-3"
          >
            Heading 3
          </a>
        </li>
        <li
          class="ecl-inpage-navigation__item"
        >
          <a
            class="ecl-link ecl-link--standalone ecl-inpage-navigation__link"
            data-ecl-inpage-navigation-link=""
            href="#inline-nav-4"
          >
            Heading 4
          </a>
        </li>
      </ul>
    </div>
  </nav>
</test>
`;
